--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -68,10 +68,8 @@ jobs:
       - name: Install package
         run: poetry install
 
-      - name: Python Semantic Release
-        uses: python-semantic-release/python-semantic-release@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build package
+        run: poetry run semantic-release build
 
       - name: Publish to TestPyPI
         uses: pypa/gh-action-pypi-publish@release/v1
