--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 python = "^3.9"
 cartopy = "^0.22.0"
 geopandas = "^0.14.1"
+pandas = "^2.1.4"
 
 [tool.poetry.dev-dependencies]
 
