fix: GH Actions doc waits for cd

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -91,7 +91,7 @@ jobs:
         uses: pypa/gh-action-pypi-publish@release/v1
   
   doc:
-    needs: ci
+    needs: cd
     runs-on: ubuntu-latest
     steps:
       - name: Set up Python
