--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -84,12 +84,15 @@ jobs:
             --extra-index-url https://pypi.org/simple \
             geovizir
 
+      - name: Clean dist
+        run: rm -rf dist/*
+
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
-      
+
       - name: Build documentation
         run: poetry run make html --directory docs/
-      
+
       - name: rsync deployments
         uses: burnett01/rsync-deployments@7.0.1
         with:
